ingress-grafana-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-prom-ingress
  namespace: monitoring
  
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.honeybunny.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 3000
    - host: prom.honeybunny.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
